--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				</div>
 			</div>
   	</div>
-  	<div class="Continue-Button"> <a onClick="addHeight(this)">Continue</a> </div>
+  	<div class="Continue-Button"> <a onClick="addHeight(this); BillTutorial();">Continue</a> </div>
   </section>
 
 	<!-- Chapter 2: Bills -->
