bills narration, dentist info
edited bill narration to make sense, added dentist info (TODO: add dentist hours)

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 			<div class="flexContainer column narrationInner">
 				<div>
 					<h1 style="margin: 0 0 1em;">Tuesday Evening</h1>
-    			<p>The kids are fed and zoned out watching cartoons on one of those channels that always plays cartoons. You are sitting at a freshly cleared dining room table sorting through bills that are in various states of due (some in the state of "Over"). Rent is due before your next paycheck, so you'll have to choose which bills you can afford until then.</p>
+    			<p>The kids are fed and zoned out watching cartoons on one of those channels that always plays cartoons. After the grocery store debacle, you went to one of those cash advance places to get enough money to pay bills and rent. You are sitting at a freshly cleared dining room table sorting through bills that are in various states of due (some in the state of "Over"). After subtracting rent, you have $400. You'll have to choose which bills you can afford.</p>
 					<ul>
 						<li class="flexContainer row">
 							<p>Paying the bills will cost <b style="color:green">money</b></p>
@@ -294,7 +294,7 @@
 					<div>
 						<h1 style="margin: 0 0 1em;">Scheduling a dentist</h1>
 						<p>At dinner, Mia mentioned they learned about dental care at school today and the teacher asked the students when they had last visited a dentist. Mia couldn't answer because she couldn't remember.</p>
-						<p>You realize that your children have not had a dental appointment since moving to the current neighborhood. It has been 4 years since their last dental check-up. You decide to schedule a dental visit for the children.</p>
+						<p>You know the answer though. Neither you nor your children have had a dental appointment since their father passed. That would make it at least 2 years since their last dental check-up. You decide to schedule a dental visit for the children.</p>
 					</div>
 				</div>
   	</div>
@@ -314,40 +314,40 @@
   								<h1>Hilltop Dental Group</h1>
   								<div>
   									Hours:</br>
-  									Distance:</br>
-  									Travel Time (Bus):
+  									Distance: 6.2 mi</br>
+  									Travel Time (Bus): 52 min - 1 hr 22 min
   								</div>
   							</div>
   							<div class="dentist-list-item" id="location2">
-  								<h1>Dentist 2</h1>
+  								<h1>Willow Creek Dentistry</h1>
   								<div>
   									Hours:</br>
-  									Distance:</br>
-  									Travel Time (Bus):
+  									Distance: 4 mi</br>
+  									Travel Time (Bus): 1 hr 28 min - 1 hr 58 min
   								</div>
   							</div>
   							<div class="dentist-list-item" id="location3">
   								<h1>Buckeye Dental</h1>
   								<div>
   									Hours:</br>
-  									Distance:</br>
-  									Travel Time (Bus):
+  									Distance: 3.3 mi</br>
+  									Travel Time (Bus): 52 min - 1 hr 22 min 
   								</div>
   							</div>
   							<div class="dentist-list-item" id="location4">
   								<h1>Williams Dental Group</h1>
   								<div>
   									Hours:</br>
-  									Distance:</br>
-  									Travel Time (Bus):
+  									Distance: 2.2 mi</br>
+  									Travel Time (Walking): 44 min 
   								</div>
   							</div>
   							<div class="dentist-list-item" id="location5">
   								<h1>Smith Family Dentistry</h1>
   								<div>
   									Hours:</br>
-  									Distance:</br>
-  									Travel Time (Bus):
+  									Distance: 4.8 mi</br>
+  									Travel Time (Bus): 1 hr 11min - 1 hr 41 min
   								</div>
   							</div>
   						</div>
