--- a/index.html
+++ b/index.html
@@ -86,10 +86,14 @@
   <!-- Intro: Narration -->
   <section class="narration" id="Intro">
     <buffer></buffer>
-    <div class="square-wrapper2">
+    <div class="square-wrapper2" style="height: 2em;">
       <div class="square2 square-transition2"> Intro: Beyond the Clinic Section </div>
-      
     </div>
+    <div>
+    	<video height="60vh" id="callVid" onClick="playPause(this)">
+				<source src="videos/MES-IntroSequence-Test01.mp4" type="video/mp4">
+			</video>
+		</div>
     <div> <a class="Ch1-Sct2-Button" onClick="addHeight(this)">Continue</a> </div>
   </section>
 
