--- a/module2.html
+++ b/module2.html
@@ -69,7 +69,7 @@
         </svg>
   		</div>
   	</div>
-  	<div><button onClick="Module2Next();">Next</button></div>
+  	<div><button onClick="Module2Next();">Next Layout</button></div>
   </section>
 
 <!--   <section class="narration flexContainer column" id="module2-sct1" style="justify-content: center;">
