final dentist section updates
finished dentist section (for now)

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       </ul>
     </shoppingspreeIcons>
     <stats class="stats-hidden stats-visible">
-      <ul>
-        <li>Energy <div id="energy"> </div></li>
-        <li>Mood <div id="mood"> </div></li>
-        <li>Tooth <div id="tooth"> </div></li>
-        <li>Money <div id="money"> </div></li>
+      <ul style="display: none">
+        <li style="color: black;">Energy <div id="energy"> </div></li>
+        <li style="color: black;">Mood <div id="mood"> </div></li>
+        <li style="color: black;">Tooth <div id="tooth"> </div></li>
+        <li style="color: black;">Money <div id="money"> </div></li>
       </ul>
     </stats>
   </header>
@@ -81,7 +81,6 @@
   </section>
 
 <!-- Test Section -->
-  	
 
   <!-- Intro: Narration -->
   <section class="narration" id="Intro">
@@ -315,41 +314,41 @@
   						<div class="dentist-list-header">Dentist Selection</div>
   						<div id="dentist-list-container">
   							<div class="dentist-list-item" id="location1">
-  								<h1>Hilltop Dental Group</h1>
+  								<h1 class="dentistName">Hilltop Dental Group</h1>
   								<div>
-  									Hours:</br>
+  									Hours: M-F 9am-4pm</br>
   									Distance: 6.2 mi</br>
   									Travel Time (Bus): 52 min - 1 hr 22 min
   								</div>
   							</div>
   							<div class="dentist-list-item" id="location2">
-  								<h1>Willow Creek Dentistry</h1>
+  								<h1 class="dentistName">Willow Creek Dentistry</h1>
   								<div>
-  									Hours:</br>
+  									Hours: M-F 6:30am-5:30pm, Sat 9am-4pm, Sun 12pm-3pm</br>
   									Distance: 4 mi</br>
   									Travel Time (Bus): 1 hr 28 min - 1 hr 58 min
   								</div>
   							</div>
   							<div class="dentist-list-item" id="location3">
-  								<h1>Buckeye Dental</h1>
+  								<h1 class="dentistName">Buckeye Dental</h1>
   								<div>
-  									Hours:</br>
+  									Hours: M-F 7am-3pm, Sat 8am-2pm</br>
   									Distance: 3.3 mi</br>
   									Travel Time (Bus): 52 min - 1 hr 22 min 
   								</div>
   							</div>
   							<div class="dentist-list-item" id="location4">
-  								<h1>Williams Dental Group</h1>
+  								<h1 class="dentistName">Williams Dental Group</h1>
   								<div>
-  									Hours:</br>
+  									Hours: M-F 6am-4pm, Sat 11am-3pm</br>
   									Distance: 2.2 mi</br>
   									Travel Time (Walking): 44 min 
   								</div>
   							</div>
   							<div class="dentist-list-item" id="location5">
-  								<h1>Smith Family Dentistry</h1>
+  								<h1 class="dentistName">Smith Family Dentistry</h1>
   								<div>
-  									Hours:</br>
+  									Hours: M-F 6am-5pm, Sat 9am-5pm, Sun 10am-3pm</br>
   									Distance: 4.8 mi</br>
   									Travel Time (Bus): 1 hr 11min - 1 hr 41 min
   								</div>
