--- a/index.html
+++ b/index.html
@@ -1,49 +1,48 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-	<!-- I am testing making one change and pushing it to github -->
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Equity Simulation</title>
-<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
-<link href="css/animation.css" rel="stylesheet" type="text/css">
-<link href="css/content.css" rel="stylesheet" type="text/css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Equity Simulation</title>
+	<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
+	<link href="css/animation.css" rel="stylesheet" type="text/css">
+	<link href="css/content.css" rel="stylesheet" type="text/css">
 
-<!-- jquery library -->
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
- -->
-<script src="scripts/jquery.min.js"></script>
+	<!-- jquery library -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	 -->
+	<script src="scripts/jquery.min.js"></script>
 
-<!-- d3 library -->
-<!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
-<script src="scripts/d3.v7.min.js"></script>
+	<!-- d3 library -->
+	<!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
+	<script src="scripts/d3.v7.min.js"></script>
 
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. --> 
-<script>var __adobewebfontsappname__="dreamweaver"</script> 
-<!-- <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>  -->
-<script src="scripts/source-sans-pro:n2:default.js" type="text/javascript"></script> 
+	<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. --> 
+	<script>var __adobewebfontsappname__="dreamweaver"</script> 
+	<!-- <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>  -->
+	<script src="scripts/source-sans-pro:n2:default.js" type="text/javascript"></script> 
 
-<!-- my scripts -->
-<script type="text/javascript" src="scripts/cookieControl.js"></script> 
+	<!-- my scripts -->
+	<script type="text/javascript" src="scripts/cookieControl.js"></script> 
 
-<script type="text/javascript" src="scripts/stats.js"></script> 
-<script type="text/javascript" src="scripts/actions.js"></script> 
-<script type="text/javascript" src="scripts/purchasing.js"></script> 
-	<!--<script type="text/javascript" src="scripts/require.js"></script> -->
-	<!--<script type="text/javascript" src="json/test.json"></script>-->
+	<script type="text/javascript" src="scripts/stats.js"></script> 
+	<script type="text/javascript" src="scripts/actions.js"></script> 
+	<script type="text/javascript" src="scripts/purchasing.js"></script> 
+		<!--<script type="text/javascript" src="scripts/require.js"></script> -->
+		<!--<script type="text/javascript" src="json/test.json"></script>-->
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries --> 
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// --> 
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-<script>
-	//$(document).ready( function() {    
-  //      $("#Maps_1").load("adobexd/Maps_1.html");
-	//});	
-</script>
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries --> 
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// --> 
+	<!--[if lt IE 9]>
+	      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	    <![endif]-->
+	<script>
+		//$(document).ready( function() {    
+	  //      $("#Maps_1").load("adobexd/Maps_1.html");
+		//});	
+	</script>
 </head>
 <body id="body">
 <!-- Main Container -->
@@ -76,24 +75,24 @@
       <h2 class="hero_header">MES <span class="light">Medicaid Equity Simulation</span></h2>
       <p class="tagline"></p>
     </div>
-    <div style="height: 1em;" class="align-bottom"> <a class="start-Button" onClick="addHeight(this)">Start</a> </div>
+    <div style="height: 1em;" class="align-bottom"> <a class="start-Button" onClick="addHeight(this); playPause(d3.select('#callVid').node(), 2000);">Start</a> </div>
     <buffer></buffer>
   </section>
 
 <!-- Test Section -->
 
+
   <!-- Intro: Narration -->
   <section class="narration" id="Intro">
-    <buffer></buffer>
-    <div class="square-wrapper2" style="height: 2em;">
-      <div class="square2 square-transition2"> Intro: Beyond the Clinic Section </div>
-    </div>
-    <div>
-    	<video height="60vh" id="callVid" onClick="playPause(this)">
+    <div style="display: flex; justify-content: center; height: 70vh; position: relative;">
+    	<div class="square-wrapper2" style="height: 1.5em; position: absolute; top: -2em; overflow: visible;">
+      	<div class="square2 square-transition2"> Prologue </div>
+    	</div>
+    	<video style="object-fit: cover; position: absolute; width: 60%; height: 100%" id="callVid" onClick="playPause(this)">
 				<source src="videos/MES-IntroSequence-Test01.mp4" type="video/mp4">
 			</video>
 		</div>
-    <div> <a class="Ch1-Sct2-Button" onClick="addHeight(this)">Continue</a> </div>
+    <div style="display: flex; justify-content: flex-end;"> <a class="Ch1-Sct2-Button" onClick="addHeight(this)">Continue</a> </div>
   </section>
 
 	<!-- Chapter 1: Grocery Narration -->
@@ -242,9 +241,14 @@
 	  						<button id="AddRemoveBillButton">Add Bill</button>
   						</div>
   						<div class="flexContainer row">
-  							<h1>Total: $</h1><h1 id="billTotal">0.00</h1>
+  							<h1>Total:</h1><h1 id="billTotal" style="padding: 0 0 0 1em;">$0.00</h1>
   						</div>
   					</div>
+  				</div>
+  			</div>
+  			<div style="align-self: end;display: flex;justify-content: center;">
+  				<div>
+	  				<button id="PayBillsButton" onClick="BillConclusion()">Pay Bills</button>
   				</div>
   			</div>
   		</div>
