changed page title and starting module 2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Equity Simulation</title>
+	<title>MCarES</title>
 	<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
 	<link href="css/animation.css" rel="stylesheet" type="text/css">
 	<link href="css/content.css" rel="stylesheet" type="text/css">
@@ -72,7 +72,7 @@
 		  <img src="images/Family.png" class="hero_image">
 	  </div>
     <div class="align-bottom">
-      <h2 class="hero_header">MES <span class="light">Medicaid Equity Simulation</span></h2>
+      <h2 class="hero_header">MCarES<span class="light">Medicaid Care Experience Simulation Project</span></h2>
       <p class="tagline"></p>
     </div>
     <div style="height: 1em;" class="align-bottom"> <a class="start-Button" onClick="addHeight(this); playPause(d3.select('#callVid').node(), 2000);">Start</a> </div>
