--- a/module2.html
+++ b/module2.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Equity Simulation - Module 2</title>
+<title>MCarES - Module 2</title>
 <link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
 <link href="css/animation.css" rel="stylesheet" type="text/css">
 <link href="css/content.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@
 <div class="container" style="background-color: rgba(70,140,200,0.3);">
 	<section class="flexContainer column" style="justify-content: space-between; height: 65vh; margin: 15vh 4em; border-radius: 10px; background-color: rgba(50,65,80,0.8); padding: 5vh">
 		<!-- Title -->
-  	<div>
+  	<div id="titleSection">
   		<h1 style="margin: 0;"> Title</h1>
   	</div>
   	<!-- Mid section -->
@@ -55,7 +55,7 @@
   		</div>
   	</div>
   	<!-- Bottom section -->
-  	<div class="flexContainer row" style="align-self: center; text-align: center;">
+  	<div id="bottomSection" class="flexContainer row" style="align-self: center; text-align: center;">
   		<div class="bulletProgress">
   			<svg viewBox="0 0 80 10" width="100%" height="30">
           <symbol id="circleButton" width="8" height="8" viewBox="0 0 2 2">
@@ -69,7 +69,7 @@
         </svg>
   		</div>
   	</div>
-  	<div><button onClick="Module2Next();">Next Layout</button></div>
+  	<div><button id="bottomContinueButton" onClick="">Continue</button></div>
   </section>
 
 <!--   <section class="narration flexContainer column" id="module2-sct1" style="justify-content: center;">
