--- a/module2.html
+++ b/module2.html
@@ -45,6 +45,10 @@
 
   	</div>
   	<!-- Bottom section -->
+
+  	<div id="bottomContinueButtonContainer" class="flexContainer row" style="justify-content: flex-start;">
+  		<button id="bottomContinueButton" onClick="">Continue</button>
+  	</div>
   	<div id="bottomSection" class="flexContainer row" style="align-self: center; text-align: center;">
   		<div class="bulletProgress">
   			<svg viewBox="0 0 80 10" width="100%" height="30">
@@ -59,7 +63,6 @@
         </svg>
   		</div>
   	</div>
-  	<div><button id="bottomContinueButton" onClick="">Continue</button></div>
   </section>
 
 
