transition text added
transition text

--- a/index.html
+++ b/index.html
@@ -378,9 +378,11 @@
 			<div class="flexContainer column narrationInner">
 		    <buffer></buffer>
 		    <div class="square-wrapper">
-		      <div class="square square-transition"> Outro </div>
+		      <div class="square square-transition"> Finally! After that hurdle of finding a dentist for Mia, you enjoy a sense of accomplishment and relief that life is getting back on track. It feels good to take care of the family’s health.
+		      	<br>
+					You write down the date and time for the appointment and tell the kids about the upcoming dental visit. </div>
 		    </div>
-		    <div> <a href="module2.html" style="color: white; font-weight: bold;">Go To Module 2</a> </div>
+		    <div> <a href="module2.html" style="color: white; font-weight: bold;">Continue to the Dentist Visit</a> </div>
 	  	</div>
   	</div>
 	</section>
