--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </header>
   
   <!-- Hero Section -->  
-  <section class="hero">
+  <section id="splashSection" class="hero">
 	  <div class="align-bottom">
 		  <img src="images/Family.png" class="hero_image">
 	  </div>
