disclosures, stats, another video tweak
changed the display/language of the disclosures and logos, added a logo image, a deactivated stats image, and changed the name of the toothpaste icon to match its link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       </ul>
     </shoppingspreeIcons>
     <stats class="stats-hidden stats-visible">
+    	<div style="background-image: url(../images/StatusIconslarge.png);background-repeat: no-repeat;background-size: contain;background-position-x: right;height: 5vh;margin: 2vh;"></div>
       <ul style="display: none">
         <li style="color: black;">Energy <div id="energy"> </div></li>
         <li style="color: black;">Mood <div id="mood"> </div></li>
@@ -88,7 +89,7 @@
     	<div class="square-wrapper2" style="height: 1.5em; position: absolute; top: -2em; overflow: visible;">
       	<div class="square2 square-transition2"> Prologue </div>
     	</div>
-    	<video style="object-fit: cover; position: absolute; width: 110%; height: 80%" id="callVid" onClick="playPause(this)">
+    	<video style="object-fit: contain; position: absolute; width: 100%; height: 100%" id="callVid" onClick="playPause(this)">
 				<source src="videos/MES-IntroSequence-Test01.mp4" type="video/mp4">
 			</video>
 		</div>
