stats placeholder fix
hopefully this fixed the broken link to the stats placeholder image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </ul>
     </shoppingspreeIcons>
     <stats class="stats-hidden stats-visible">
-    	<div style="background-image: url(../images/StatusIconslarge.png);background-repeat: no-repeat;background-size: contain;background-position-x: right;height: 5vh;margin: 2vh;"></div>
+    	<div class="placeHolderStats"></div>
       <ul style="display: none">
         <li style="color: black;">Energy <div id="energy"> </div></li>
         <li style="color: black;">Mood <div id="mood"> </div></li>
